# src/swagger/swagger.json
@@ -1688,88 +1688,6 @@
         ]
       }
     },
-    "/api/v2/assets/type/{type}": {
-      "get": {
-        "tags": [
-          "asset"
-        ],
-        "summary": "Find assets",
-        "description": "Return assets",
-        "operationId": "getAssetsByType",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "type",
-            "in": "path",
-            "description": "type of asset",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/Asset"
-            }
-          },
-          "400": {
-            "description": "Invalid ID supplied"
-          },
-          "404": {
-            "description": "Asset not found"
-          }
-        },
-        "security": [
-          {
-            "Bearer": []
-          }
-        ]
-      }
-    },
-    "/api/v2/assets/issuer/{issuer}": {
-      "get": {
-        "tags": [
-          "asset"
-        ],
-        "summary": "Find assets",
-        "description": "Return assets",
-        "operationId": "getAssetsByIssuer",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "issuer",
-            "in": "path",
-            "description": "issuer of asset",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/Asset"
-            }
-          },
-          "400": {
-            "description": "Invalid ID supplied"
-          },
-          "404": {
-            "description": "Asset not found"
-          }
-        },
-        "security": [
-          {
-            "Bearer": []
-          }
-        ]
-      }
-    },
     "/api/v2/assets/limit/{limit}": {
       "get": {
         "tags": [
